style: align header items

--- a/src/app/pages/all-pokemons/all-pokemons.component.html
+++ b/src/app/pages/all-pokemons/all-pokemons.component.html
@@ -7,7 +7,7 @@
     </ion-row>
     <ion-item-divider class="ion-hide-sm-up">
     </ion-item-divider>
-    <ion-row class="ion-justify-content-center">
+    <ion-row class="ion-justify-content-center ion-align-items-center ion-justify-content-center">
       <ion-col sizeLg="3" sizeXs="12">
         <ion-searchbar (ionClear)="clearName()" (keyup.enter)="filterByName()"
                        [formControl]="pokemon" placeholder="{{'SEARCH POKEMON'| translate}}"></ion-searchbar>
