--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
 <ion-header class="ion-hide-sm-down">
   <ion-toolbar>
     <ion-grid>
-      <ion-row class="ion-justify-content-around">
-        <ion-col class="ion-hide-sm-down" size="6" sizeLg="3">
+      <ion-row class="ion-justify-content-around ion-align-items-center">
+        <ion-col class="ion-hide-sm-down" size="6" sizeLg="2">
           <ion-title (click)="utilsService.goBackToPokedex()" class="main-title">Pokédex</ion-title>
         </ion-col>
-        <ion-col sizeLg="2">
+        <ion-col sizeLg="1">
           <ion-button (click)="goToCaptureMode()" color="light">{{'CATCH MODE' | translate}}</ion-button>
         </ion-col>
         <ion-col size="auto">
