style: improve grid responsiveness

--- a/src/app/pages/all-pokemons/all-pokemons.component.html
+++ b/src/app/pages/all-pokemons/all-pokemons.component.html
@@ -67,7 +67,7 @@
                   }"
         >
           <ion-card-header>
-            <ion-img [alt]="pokemon.name" [src]="pokemon.img" class="icon"></ion-img>
+            <ion-img [alt]="pokemon.name" [src]="pokemon.img"></ion-img>
             <ion-card-title>
               {{'NAMES.' + pokemon.name | translate}}
             </ion-card-title>
