style: global icon size

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,7 +12,7 @@
           </ion-button>
         </ion-col>
         <ion-col class="ion-align-self-center" size="2">
-          <ion-icon (click)="presentPopover($event)" class="user-icon" name="person-circle-outline">
+          <ion-icon (click)="presentPopover($event)" class="icon" name="person-circle-outline">
           </ion-icon>
         </ion-col>
       </ion-row>
