--- a/src/app/pages/pokemon-details/details/pokemon-details.component.html
+++ b/src/app/pages/pokemon-details/details/pokemon-details.component.html
@@ -34,8 +34,8 @@
         <ion-row>
           <ion-col sizeLg="4">
             <ion-item>
-              <ion-label>{{'LEVEL' | translate}} :</ion-label>
-              <ion-input (ionChange)="manageLevel($event)" max="100" min="1" type="number"></ion-input>
+              <ion-input (ionChange)="manageLevel($event)" label="{{'LEVEL' | translate}} :" max="100" min="1"
+                         type="number"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
