--- a/src/app/pages/pokemon-details/slide/slide.component.html
+++ b/src/app/pages/pokemon-details/slide/slide.component.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <swiper-container hash-navigation="true" initialSlide="{{initPokemon}}">
+  <swiper-container hash-navigation="true" initialSlide="{{initPokemon}}" navigation="true">
     <swiper-slide *ngFor="let pokemon of pokemonArray">
       <app-pokemon-details [pokemon]="pokemon"></app-pokemon-details>
     </swiper-slide>
