--- a/src/app/pages/capture/capture.component.scss
+++ b/src/app/pages/capture/capture.component.scss
@@ -1,19 +1,33 @@
-ion-grid {
-  height: 80%;
+@media (max-width: 728px) {
+  ion-card {
+    width: 90%;
+    height: 100%;
+    margin: auto;
+
+    & ion-icon {
+      padding: 15%
+    }
+
+    & ion-img {
+      height: 60%;
+    }
+
+  }
 }
 
-ion-img {
-  height: 420px;
-}
+@media (min-width: 768px) {
+  ion-card {
+    width: 75%;
+    height: 90%;
+    margin: auto;
 
-.catch-button {
-  top: 80%;
-  width: 100%;
-  height: 45px;
-}
+    & ion-img {
+      height: 60%;
+    }
 
-.encounter-button {
-  top: 90%;
-  width: 100%;
-  height: 45px;
+    & ion-icon {
+      padding-top: 10%;
+      padding-left: 30%;
+    }
+  }
 }
