--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,11 @@
   height: 30px;
 }
 
+.icon-lg {
+  width: 60px;
+  height: 60px;
+}
+
 ion-popover {
   --box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.6);
   --width: 150px;
